Adding additional utility functions to ParserTest and test cases for event sequences in Pre-unified G1 logs.